# geo-wars

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
assets/: fire_particle.txt  player_spaceship.txt  player_spaceship_projectile.txt  ufo.txt
include/: game_data.hpp  game_layer.hpp
include/assets_management/: polygon_loader.hpp
include/ecs/: component_holder.hpp  component_holder.ipp  entity.hpp  entity.ipp  entity_manager.hpp  entity_manager.ipp  entity_view.hpp  entity_view.ipp
include/events/: event.hpp  event.ipp  event_dispatcher.hpp  event_dispatcher.ipp  event_sink.hpp  event_sink.ipp
include/input/: keyboard.hpp  mouse.hpp
include/math/: mat3.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/renderer/: camera.hpp  color.hpp  draw_primitives.hpp  particle_system.hpp  renderer.hpp
include/scene/: components.hpp  scene.hpp  script.hpp
include/utils/: float_compare.hpp  random.hpp
src/: CMakeLists.txt  Game.cpp  game_data.cpp  game_layer.cpp
src/assets_management/: CMakeLists.txt  polygon_loader.cpp
src/ecs/: CMakeLists.txt  component_holder.cpp  entity.cpp  entity_manager.cpp
src/events/: CMakeLists.txt  event.cpp  event_dispatcher.cpp  event_sink.cpp
src/math/: CMakeLists.txt  mat3.cpp
src/renderer/: CMakeLists.txt  draw_primitives.cpp  particle_system.cpp  renderer.cpp
src/scene/: CMakeLists.txt  components.cpp  scene.cpp
src/utils/: CMakeLists.txt  float_compare.cpp  random.cpp
